<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Multi_player"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1_0"
            android:textSize="30sp" />
        <TextView
            android:id="@+id/p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer"
            android:textSize="30sp"
            android:layout_below="@id/p1"
            />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="33dp"
            android:text="@string/reset" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/button_05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="60sp" />

        <Button
            android:id="@+id/button_06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_08"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_09"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>





