<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    tools:context=".Multi_player"
 >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TextView
        android:id="@+id/p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_0"
        android:textColor="#FFFF"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_0"
        android:textSize="30sp"
        android:textColor="#FFFF"
        android:layout_below="@id/p1"
        />

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:textColor="#FFFF"
            android:background="#000"
            android:text="@string/reset" />

    </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:textColor="#FFFF"
    android:layout_weight="1">

    <Button
        android:id="@+id/button_01"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#000"
        android:textColor="#FFFF"
        android:textSize="60sp" />

    <Button
        android:id="@+id/button_02"
        android:layout_width="0dp"
        android:background="#000"
        android:textColor="#FFFF"
        android:layout_height="match_parent"
        android:textSize="60sp"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/button_03"
        android:layout_width="0dp"
        android:background="#000"
        android:layout_height="match_parent"
        android:textColor="#FFFF"
        android:textSize="60sp"
        android:layout_weight="1"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_04"
            android:layout_width="0dp"
            android:background="#000"
            android:textColor="#FFFF"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_05"
            android:layout_width="0dp"
            android:background="#000"
            android:textColor="#FFFF"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_06"
            android:background="#000"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="#FFFF"
            android:textSize="60sp"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/button_07"
            android:layout_width="0dp"
            android:background="#000"
            android:layout_height="match_parent"
            android:textColor="#FFFF"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_08"
            android:layout_width="0dp"
            android:background="#000"
            android:layout_height="match_parent"
            android:textColor="#FFFF"
            android:textSize="60sp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/button_09"
            android:layout_width="0dp"
            android:background="#000"
            android:layout_height="match_parent"
            android:textSize="60sp"
            android:textColor="#FFFF"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>





